# common_python

./: .gitignore  .pre-commit-config.yaml  README.md  _a.py  pyproject.toml  setup.cfg
.github/workflows/: buidl_upload_pypi.yaml  check_pwd.yaml
_other/: _clickhouse_test.py  _merge_video.py  _tencent.py  _tencent_test.py  mq_test.py
_other/_language_utils/: language.py  oulu.py
_other/_language_utils/get_youdao_words/: res.txt
_other/_message_queue/: kafka.py  rabbitmq.py
common_packages/: __init__.py
common_packages/_language_utils/get_youdao_words/: filter_new.py
common_packages/db_utils/: __init__.py  clickhouse.py  clickhouse_utils.py  mysql.py  mysql_utils.py
common_packages/email/: __init__.py
common_packages/email_utils/: __init__.py
common_packages/file_storage/: __init__.py  file_interface.py  local.py  tencent_cos.py
common_packages/file_storage_utils/: __init__.py  file_interface.py  local.py  tencent_cos.py
common_packages/geo_district/: __init__.py  amap.py
common_packages/geo_search/: __init__.py  amap.py
common_packages/geography/: __init__.py  district_amap.py  search_amap.py
common_packages/language_utils/get_youdao_words/: get_youdao_words.py
common_packages/llm/: __init__.py  aliyun_qwen.py  azure_gpt.py  baidu_ernie.py
common_packages/message_queue/: __init__.py  kafka.py  rabbitmq.py
common_packages/message_queue_utils/: __init__.py  interface.py  kafka.py  rabbitmq.py
common_packages/oauth2/: google.py
common_packages/parse_subtitle/: __init__.py  aa.vtt
common_packages/pdf/: aaa.py  local_parse.py
common_packages/sms/: interface.py  tencent_sms.py
common_packages/sms_utils/: __init__.py  interface.py  tencent_sms.py
common_packages/translate/: __init__.py  microsoft.py  tencent.py  youdao.py
common_packages/translate_utils/: __init__.py  microsoft.py  tencent.py  youdao.py
common_packages/tts/: __init__.py  microsoft.py
common_packages/utils/: _github_hooks.py  es_utils.py  image_utils.py  parse_srt_file.py  send_email.py  tencent_utils.py  utils.py
common_packages/weather/: amap.py  wanwei.py
test_services/: backend_service.py  compose-kafka.yml  compose-mysql.yml  compose-rabbitmq.yml  init_mysql.sql
tests/: __init__.py  clickhouse_test.py  conftest.py  file_storage_test.py  mq_test.py  mysql_test.py  sms_test.py  tencent_utils_test.py  test_rabbitmq.py  test_send_email_test.py  translate_tencent_utils_test.py  translate_utils_test.py  tts_test.py  utils_test.py
tests/fixtures/: config.py  db.py  geography.py  llm.py  oauth2.py  services.py  storage.py  translate.py  tts.py  utils.py  weather.py
tests/fixtures/translate_data/: sentence_translate_data.json  word_translate_data.json
tests/test_db_utils/: clickhouse_test.py  mysql_test.py
tests/test_file_storage/: file_storage_test.py  local_test.py  tencent_cos_test.py
tests/test_geography/: test_district_amap.py  test_search_amap.py
tests/test_llm/: baidu_ernie_test.py
tests/test_oauth2/: test_google.py
tests/test_translate/: _tencent_test.py  microsoft_test.py  youdao.py  youdao_test.py
tests/test_tts/: microsoft_test.py  tts_test.py
tests/test_utils/: aa.py  mq_test.py  sms_test.py  tencent_utils_test.py  test_send_email_test.py  utils_test.py
tests/test_weather/: test_amap.py  test_wanwei.py
