[tool.poetry]
name = "common-packages"
# 项目版本号
version = "0.1.2"
description = "封装了一些常用功能"
authors = ["evans.jiang <evans.jiang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
twine = "^4.0.2"
setuptools = "^68.2.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common_packages"
# 打包的版本号
version = "0.1.5"
dependencies = ["requests", 'pika']

[tool.setuptools]
packages = [
    "common_packages",
    "common_packages.file_storage_utils",
    "common_packages.message_queue_utils",
    "common_packages.translate_utils",
    "common_packages.utils",
    "common_packages.email_utils",
]
