[tool.poetry]
name = "common-packages"
# 项目版本号
version = "0.1.2"
description = "封装了一些常用功能"
authors = ["evans.jiang <evans.jiang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pika = "^1.3.2"
tencentcloud-sdk-python-tmt = "^3.0.1042"
kafka-python = "^2.0.2"
clickhouse-driver = "^0.2.6"
numpy = "^1.26.2"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
azure-cognitiveservices-speech = "^1.33.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
twine = "^4.0.2"
setuptools = "^68.2.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common_packages"
# 打包的版本号
version = "0.1.11"
dependencies = [
    # "requests",
    # 'pika',
    # "tencentcloud-sdk-python-tmt",
    # "kafka-python",
    # "clickhouse-driver",
    # "numpy",
    # "pandas",
    # "sqlalchemy",
    # "pymysql",
    # "azure-cognitiveservices-speech",
]

[tool.setuptools]
packages = [
    "common_packages",
    "common_packages.file_storage_utils",
    "common_packages.message_queue_utils",
    "common_packages.translate_utils",
    "common_packages.utils",
    "common_packages.email_utils",
    "common_packages.db_utils",
    "common_packages.sms_utils",
    "common_packages.tts",
]
