[tool.poetry]
name = "common-packages"
# pip打包的版本号,每次都需要更新
version = "0.2.5"
description = "封装了一些常用功能,GitHub: https://github.com/jiangwenfan/common_packages/tree/main"
authors = ["evans.jiang <evans.jiang@gmail.com>"]
license = "MIT"
readme = "README.md"
# 自动打包子目录
packages = [{ include = "common_packages" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
# 使用时,安需要安装
# pika = "^1.3.2"
# tencentcloud-sdk-python-tmt = "^3.0.1042"
# kafka-python = "^2.0.2"
# clickhouse-driver = "^0.2.6"
# numpy = "^1.26.2"
# pandas = "^2.1.3"
# sqlalchemy = "^2.0.23"
# pymysql = "^1.1.0"
# azure-cognitiveservices-speech = "^1.33.0"
# black = "^24.8.0"
# isort = "^5.13.2"
# openai = "^1.50.2"
# srt = "^3.5.3"
# tencentcloud-sdk-python-common = "^3.0.1372"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
twine = "^4.0.2"
setuptools = "^68.2.2"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

# [build-system]
# # requires = ["setuptools"]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"

# [project]
# name = "common_packages"
# version = "0.2.4"
# description = "封装了一些常用功能"
# license = { text = "MIT" }

# [tool.setuptools]
# # pip 打包的内容
# packages = [
#     "common_packages",
#     "common_packages.db_utils",
#     "common_packages.file_storage",
#     # "common_packages.parse_subtitle",
#     "common_packages.sms",
#     "common_packages.translate",
#     "common_packages.tts",
#     "common_packages.utils",
#     "common_packages.llm",
#     "common_packages.oauth2",
#     "common_packages.geography", # 修复拼写错误
#     "common_packages.weather",
# ]
