[flake8]
max-line-length = 88

# 其他flake8配置项
# exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[metadata]
name = common_packages
version = 0.2.4
description = 封装了一些常用功能,GitHub: https://github.com/jiangwenfan/common_packages/tree/main
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
